<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textListeClientExistants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listeClientsExistants" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNom"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewNom"
            android:layout_weight="0.31" />

        <TextView
            android:id="@+id/textViewPren"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewPren" />

        <TextView
            android:id="@+id/textViewAdr"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewAdr"
            android:layout_weight="1" />

        <!-- <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewEmail" /> -->

        <TextView
            android:id="@+id/textViewTel"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.13"
            android:text="@string/textViewTel" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewCli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonRetourReleveCompteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/retourReleveCompteur" />
</LinearLayout>